tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-latest-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
[
  {
    "signature": "4enuRCWyq1aXXGxBDYFN4ad5PzHpp6XE8mfJkBipT8SSRgMQyEWhfiJWtwcLYnqxjdesFQL15GkMMjDN3pbH5t2A",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "3JeUPwyeXzf8FQ59C2j2uHkWunykPncoDj9AvkjmESkbWbkHWbCc4tfD4SpCVL4vCNcpEjvdkHSFNYfBrqdDxiDx",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "SzCjq8kMxAnvBW9pL74mJWDZFAv9jEvJeYZkWBGZyMVr3ow4NgfRZtk9J5a7VXbk1VxFWdBJj8saptpX4LZuHA5",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "Mu8x9eh2ByH3ui6wq5UNCNnm9rgxygoD57WvhRYshubLBkT5eJCu2uVB4rMHU9zZxFhC2qL1d791ZTeejq87Ae8",
    "slot": 0,
    "blockTime": 0
  }
]
