tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-mint-transaction.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: parsed_transaction
---
{
  "transaction": {
    "slot": 52,
    "transaction": [
      "AnNAVVGEexlBcQePiYd8J1SI0e8QmPGb+vdHchRTCQqM9Ml+bli1FLI903QzC6dqodJi4+ZvUL0PHRHADhWl3AuOcRL/BfC6KquO63HnWaQ7KwktwZ3tuHIKyc5Fr6hCESGHHUv4nNwVI7mBtRNg6v2amOqvj+g3BB/jsBFmv/cFgAIBCg/WO+k7ZzQAEG3W2TAv+NJZgju4PJcG/ijgISl9wbv5dmb20fJ/aarWCwdtMON5y2ApOLzHzeZm4Nb+4MGjJllcmPfFaIduvOirY3RMtXeXQWWVc88Z9/F1XC0wBqesWSDwYCc5JmqNblS/S+tYeGfqm9F3krnNH4cUp/LieFLLTURNfSBMgD20Ac9FLHl2mRGzt3Mio39m1gFXr7FfMUFFAwZGb+UhFzL/7K26csOb57yM5bvF9xJrLEObOkAAAAD1itLHAR4o1KBGtaL93zMnlB5NHD6SDRSqmfZ7YrJBH7SlQOyDt9WW7rhI2hN7rYf3O2M6x7u3IJANtD1uTGCcBt324ddloZPZy+FGzut5rBy0he1fWzeROoz1hX7/AKnu+iPYo1pSSKfRxOPSrVn/jhTHlpDXPaQiL7Xk4pnQEZHO1F4ue36ePjvKhQ/1+bWXRuK+jAPhOiyhsi1YEji5C7wPwLtHyi90xBEulKsTz6PGNOXcF+rLA80aI81+eHyUJa+9/ABJJWec/z1Ytd+0tY2uuyhzxF6W5bZkVSls+KxW1RflaYZhtplDZTn2OqAPHuUse8KSTOHPrHkF2nKGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC+7xDL3HyAcVSsf6tM2/KAwoApoNApZsD0a27dHzkLLAIFAAUCQEIPAAYOAAEHAgMICQoLDA0EBg448SIwuiWze8ABAAAAKWFTMlu23yBk2csQ0qdjmn86o+ZqI2Q82lj/1dggj3MBAAAA6AMAAAAAAAAA",
      "base64"
    ],
    "meta": {
      "err": null,
      "status": {
        "Ok": null
      },
      "fee": 10000,
      "preBalances": [
        996489120,
        0,
        1461600,
        2039280,
        9496056960,
        1,
        1141440,
        0,
        929020800,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "postBalances": [
        996478935,
        0,
        1461600,
        2039280,
        9496057145,
        1,
        1141440,
        0,
        929020800,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "innerInstructions": [
        {
          "index": 1,
          "instructions": [
            {
              "programIdIndex": 8,
              "accounts": [
                2,
                3,
                1
              ],
              "data": "6qYT3cRnoTxb",
              "stackHeight": 2
            },
            {
              "programIdIndex": 9,
              "accounts": [
                0,
                7,
                10,
                11,
                12,
                13,
                6,
                9,
                9,
                14,
                9,
                4
              ],
              "data": "oMTGA8J44vo3pCVmAjiCzPxz4nKYu5pf4rExqGMKqP54CBrn4JhRS8L9JaAC9QkxSi3ozrsj1CoNuh8S34VVg5GWWZcmhEFpUwbeP6sBXxs2j8cFssN1dEkmxXxpj1gKK3FMoad7n8bVvL3WDiCZRyjrKVuh2k6wWbG23aiczUn9kw2kvcGqd9FmqDYbDKKndyjJRvHsYfsyZmcjtNG93VHzhV26e2htiYh6yBfbYiqVH7aAW7y7MYTNsZvkRibRJ7NJrViHN2Lru1vvCFq9NPNNHrsGdunMbq199BkT",
              "stackHeight": 2
            },
            {
              "programIdIndex": 13,
              "accounts": [
                0,
                12,
                10,
                14,
                4
              ],
              "data": "5wPdbtbk7M4b3JSHrvyzJCo2PzcvwajjZsYDjR2mPH6QWuyRdrEYdziaJzxFv5",
              "stackHeight": 3
            },
            {
              "programIdIndex": 14,
              "accounts": [
                0,
                4
              ],
              "data": "3Bxs4XoPh3u5UtLF",
              "stackHeight": 4
            },
            {
              "programIdIndex": 11,
              "accounts": [],
              "data": "11112kX1UKQEwNzET6jxMwVB3UM47oQJftYqqkzqrS3iK5RrmgwJLa8UZ2fF14EScsDePRvwSLp515ph5pdnDKy3FQpSMpixfmHeCjVveQy5YMgfEkCNJiTNLco6dxtufFhNd6jA7bfGwPjN4porWjq38SHDGAGiHo4kqPodVqPX2FK3hFjGFCxQv7NDHgnbSTFwhP2pNRkwSGXHeJxMY2gF8XBmbF2H255iQGs6cLLH7VrNVCDZYGkbgeRDviKczTR1JUcvsumrBk31DeMM5xzq576TxWgLzVnzKSgD4ebF5c6EcqBhfpyrjAwC6dM6gFBim1C8R5RTeTU3mxWMTM5C1ggmBAkdA7gTNiBDmYLPrUc8FpsddakHgkFRodJfUCUX36JcVEU8tBfgLYqwV",
              "stackHeight": 3
            }
          ]
        }
      ],
      "logMessages": [
        "Program ComputeBudget111111111111111111111111111111 invoke [1]",
        "Program ComputeBudget111111111111111111111111111111 success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN invoke [1]",
        "Program log: Instruction: MintTo",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA invoke [2]",
        "Program log: Instruction: MintTo",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA consumed 4492 of 985597 compute units",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA success",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN invoke [2]",
        "Program log: Instruction: InvokeCpi",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK invoke [3]",
        "Program log: Instruction: AppendLeavesToMerkleTrees",
        "Program 11111111111111111111111111111111 invoke [4]",
        "Program 11111111111111111111111111111111 success",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK consumed 40972 of 930379 compute units",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK success",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV invoke [3]",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV consumed 38 of 886758 compute units",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV success",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN consumed 79579 of 965736 compute units",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN consumed 114530 of 999850 compute units",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN success"
      ],
      "preTokenBalances": [
        {
          "accountIndex": 3,
          "mint": "BJ86ojfyha7r9EhDBxs43uSdxjdePz3dWfU1sU2oYeSj",
          "uiTokenAmount": {
            "uiAmount": null,
            "decimals": 2,
            "amount": "0",
            "uiAmountString": "0"
          },
          "owner": "DAAY8YnCFASfeLyXFXff8bTitePXdGcXYr6DkkYJ3aJX",
          "programId": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
        }
      ],
      "postTokenBalances": [
        {
          "accountIndex": 3,
          "mint": "BJ86ojfyha7r9EhDBxs43uSdxjdePz3dWfU1sU2oYeSj",
          "uiTokenAmount": {
            "uiAmount": 10.0,
            "decimals": 2,
            "amount": "1000",
            "uiAmountString": "10"
          },
          "owner": "DAAY8YnCFASfeLyXFXff8bTitePXdGcXYr6DkkYJ3aJX",
          "programId": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
        }
      ],
      "rewards": [],
      "loadedAddresses": {
        "writable": [],
        "readonly": []
      },
      "computeUnitsConsumed": 114680
    },
    "version": 0,
    "blockTime": 1718897718
  },
  "compressionInfo": {
    "closedAccounts": [],
    "openedAccounts": [
      {
        "account": {
          "hash": "2JtWNLi6PNDqvRmfh1Q1FsX4gGkrtEknQbgSksuZkBDo",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "mPfFaIduvOirY3RMtXeXQWWVc88Z9/F1XC0wBqesWSApYVMyW7bfIGTZyxDSp2Oafzqj5mojZDzaWP/V2CCPc+gDAAAAAAAAAAAA",
            "dataHash": "3DZpg2KCUDZ3mpD7FRT4zbpcmE1pti3KTRkKUpwPG7nn"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 0,
          "seq": 1,
          "slotCreated": 52
        },
        "optionalTokenData": {
          "mint": "BJ86ojfyha7r9EhDBxs43uSdxjdePz3dWfU1sU2oYeSj",
          "owner": "3nXnqdxiQQBBuFfCZMcpHuUcaYqSiSVWr33mmJ3dyCwk",
          "amount": 1000,
          "delegate": null,
          "state": "initialized",
          "isNative": null
        }
      }
    ]
  }
}
