tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-original_owner-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "account": {
          "hash": "oZ7nqSySeoVcM3ZF6KjSE3Q4wKj9NTWVA3dF4akhych",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "Uaavg4642BlU0qzdHNvTw5bjJPaj3sslz6Mzu1JUXgRrecV+aglSOSgsBIGOlhEvPwOkABupelZMI4UqPx6l/CwBAAAAAAAAAAEAAAAAAAAAAAA=",
            "dataHash": "2oxvZ6Cr89GyYziwQeYhjwyCodJw4D8pr8aCd6AmymoT"
          },
          "owner": "9sixVEthz2kMSKfeApZXHwuboT6DZuT6crAYJTciUCqE",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 2,
          "seq": 3,
          "slotUpdated": 0
        },
        "tokenData": {
          "mint": "6VjSatiqNLk7j52hfQmRY7vari3FLanqZBgE8AY7ocQs",
          "owner": "8EYKVyNCsDFHkxos7V4kr8bMouYU2nPJ1QXk2ET8FBc7",
          "amount": 300,
          "delegate": null,
          "state": "initialized",
          "isNative": null,
          "delegatedAmount": 0
        }
      }
    ],
    "cursor": null
  }
}
