tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-payer-proofs.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: proofs
---
{
  "context": {
    "slot": 0
  },
  "value": []
}
