tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer-transfer-transaction.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: parsed_transaction
---
{
  "transaction": {
    "slot": 37,
    "transaction": [
      "AgqPUzuefriCmaKfmFBREcwDN+sIYtuYQtgS1NozeXFyL69Joqt1kdpHC4epw4XJ3vCONQy/LU50VFz9zq8XDA8Jd8ltn2DeSctO4ML7yNSjanhOvHoMC3ynJSHQ+UdJRtRO9SRJQ0IjwXldUwo4FCbQDydQJXQHrW5PfOmNem8HgAIBCQ3aBlDHvy2dHR1xsSLJgyyuHZmIQ3MSRKCbUVbB3SOAfzkrHhhPLbbEFQtFc7nuKSh2Ljmii90Fi54wnhKQjmxFRE19IEyAPbQBz0UseXaZEbO3cyKjf2bWAVevsV8xQUUtaxlkRkeJL9L43N8LzM1Z+DDTqAsZ255jL3/4jmvEbgMGRm/lIRcy/+ytunLDm+e8jOW7xfcSayxDmzpAAAAAg9v59t3EIQNyF3nrEuVHmCdXqdCPZSuA9TsWhrbndCEOoil+7YC3WRusixHESytzAqZEyN16rFzotzPEyuSWNlFsMrUASVvF3ddqRQVrkvwl/HuvPsio5m8G2UdsurhTDpNDIZ551u6iXE8btewjsfOdab9iDneAZd45Q3AiMOsLvA/Au0fKL3TEES6UqxPPo8Y05dwX6ssDzRojzX54fNf63JzpM0ZVRDlhl2PkrfF66r2bGEeRkFE9CDGYlEw/QWw9sDR16oXGr0OrDC+PvihVhYv4P+BnMd9AilwZoB0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGWZzbrHrYP20Tjl2AiF3nz1TpVAtyvT10Tma9CVIPzlAgQABQJAQg8ABQ8AAQYHCAkKCwUFBQUMAgO4AqM0yOeMA0W6KwEAAAEj9ZLjs5Pd/HJCx900E6WzwCgQqH9F8ZLKNVH36sDCcIh08qofg0DLI1tKwswjDOnqe/Z8IjST064g2x4TzQLcBAbzgJzVFHMguZUcwrhFXSo8WgbZoAqZNXP9aUa5x0UQIstAZTEQJ91EVvmWwkTaFIRQaqQjDrWBFMDTgAgFWgEAAAABAKs6mpVcAC9yF6CjdGJh7Wz+0dgsj/Mog3uzgLT9zB1bAAEAAADoAwAAAAAAAAAAAAABAAAAAAIAAAA5Kx4YTy22xBULRXO57ikodi45oovdBYueMJ4SkI5sRSwBAAAAAAAAAQAAAAAAAAAA7Vop9230beZKTHToL/Qk2cJ4fQOziPlLk5N33dgqdhK8AgAAAAAAAAEAAAAAAAAAAAIAAAAAAAAAAAA=",
      "base64"
    ],
    "meta": {
      "err": null,
      "status": {
        "Ok": null
      },
      "fee": 10000,
      "preBalances": [
        995012370,
        1000000000,
        9496725270,
        1796849280,
        1,
        1141440,
        0,
        1141440,
        1169280,
        1141440,
        0,
        1141440,
        1
      ],
      "postBalances": [
        995002041,
        1000000000,
        9496725569,
        1796849310,
        1,
        1141440,
        0,
        1141440,
        1169280,
        1141440,
        0,
        1141440,
        1
      ],
      "innerInstructions": [
        {
          "index": 1,
          "instructions": [
            {
              "programIdIndex": 7,
              "accounts": [
                0,
                6,
                8,
                9,
                10,
                11,
                7,
                5,
                7,
                7,
                12,
                2,
                3
              ],
              "data": "Us5vXSaRQWHz5M5xWPsNiQa9DBVKfiP9xQVSUNX4TPnBxkSWo4vbFinYjFcoLndFa3yXi7PjA4vXSoyDbGnrVz7mJybpQzvAXfyp1zV5bJcD7VgG1tLLmqj8ggSPPCB3EMNSy1Y8NgCtBgXieZmXwDEJTvUJuWRAdgS6JWHKN4eHcUH9YD71cWPa4ssosKLNLB282EtDVkrdZbzpDbTgv6f7uCV2K38ZXYjFxNq3eRXDwzqAYkStQwTQezZLkyzcuhzqpY3G6nQPkcTt6f7ZbJmbtMJ3WZDkmHCg2qqcmL7XVXYMVjjf9eVdkNXueFoMSXxfju29aGDsBmnERr54TjvTpRbQqxLoPa2FMZcMt6kZ7ZoQUJGH8RUjwbSj4d3ibXV7K2DvoLCroHhZPZWAHrREXHMDbRmQT2kKvtbg1X9AcssXB3733dwLbcfwgtt2u8gENgrEH6pk2imjFQQdVioaREMjNTw47nbXoT6nNnGqGYsiZRt6Ystof5xNYCkVHLXZ41LUKVY4zgHfewPyyBTRypn1t2qCczshDzjuqfTPdSMnb1tiDRSfrms9AumqGLaBsUsQjRHfxsVi7eYVfb886A3AK18fc9RGWc61CryowF3Tagh5MP95xziaXoYu3wFgUCA4GGbtUNYKpYxbu3Kssc5UG7ZehgzbDB9Hvs1Qv9LkgHCePeoxaSCQuu3TG2fZjR4ivb8cwsdSVcqKB8cP2faFyWZsTJ23LsCGRdJAUSR3EUBWdcK1Q7bmczazVYqvxnLo1DuNixJX4C2bQdvKuMe1P8dapTf3R9kMi7VvqNpM1kNaGtN8kWAVoaTkeLgNCz9q9NB3fRpLWw2b5wNGvwaJEii5guUtkV3kkUWp9VVXb7cFeWZbFV4yAJpi6Bzf6eBobdnQCXcA5EgrXqjqahThL8SQjYbkXji71HknnxKt6VpNo7tBu4gURfPh7pGmjFHJWPA",
              "stackHeight": 2
            },
            {
              "programIdIndex": 11,
              "accounts": [
                0,
                10,
                8,
                12,
                3,
                2
              ],
              "data": "WiZw2hSp2LSxinAV5e5nSeNApBm9x3k228iqdztrxZc7LWbCC688TjjoBD9c",
              "stackHeight": 3
            },
            {
              "programIdIndex": 12,
              "accounts": [
                0,
                3
              ],
              "data": "3Bxs45shRtnA2ds5",
              "stackHeight": 4
            },
            {
              "programIdIndex": 11,
              "accounts": [
                0,
                10,
                8,
                9,
                12,
                2,
                2
              ],
              "data": "LGwwjjyKY3RsZeAVrqajqDTi51hVDWThd4PKUa4tJtWaPbav3vnwae7VUQhwAnRrbFLaC88rVzahh8pggpUQKxqdXV5EqJdMqcL1yK4k",
              "stackHeight": 3
            },
            {
              "programIdIndex": 12,
              "accounts": [
                0,
                2
              ],
              "data": "3Bxs483rNZ9HGTVh",
              "stackHeight": 4
            },
            {
              "programIdIndex": 9,
              "accounts": [],
              "data": "7G5EaipcDjSWsgBE4mdya9hM7yBi3YFfxqgQ4zhqh2rVNrbcvcjLpteT7vte7es491UoBtkWt8DtKiaXGd1qnzBN2RewXUxgrYG5zYXBNmuGNLRjaTgF5faE6XJRnmJvCt27ZMLbXdaYTwcjcwkXupqYyBGm1N9rFKidND2htzsauxP5jVk1Ly3vynM3uusqESYKDhBNgpyiFFPpqT4WhvfJZXbfPGDmopJAN2QKPN2LE3Pco1YjBRJc597P7kMYWu1tMs3iPusjrhhucY9MGTDwduVgSZLkBgugqZsUrJgizWsnbnpsGQMjrst7eYhj32DZAXHoa5iAdFVN8hGnXXoiDagbSudmT5w58vZ7sKyyXvWm3wkykyP1KfJQ71paYB3vaumDRixi7Xfm29q3XBh8Yr3iYkFKkx1YDadsxdv5dj9GNZ5YuZ1yeG556VEK12fW296HzBXtVrrbj63NfBpS2vxTJ9HWCX5LBKD4a79uBzFp8n2Dsq9qjX2ZCvDReip5fWsgbGF6CQvUViaYcm28nbbPee5fLW2triZUMen9hSt2zZDMkiTS4REkSP3r2bCqBHvmqnazX7hskovpn6KZMFrUL61Qg4E2QpoyjrrV4zEpZJdxvCYJr7b7YUetpH29oTEVi937od6secWGdAGXfxGY9UUECL6cA6VLaMrkCLLqdz4DeKdqMMEtV9jAi7b4e9vfCuLkYrxVHW8KvXB4LsFbQ5aXwYdh5YfXPRfdRBcYYGoEEACUZEQ8aFKNpPt66wQQ6kzGbxtbCUW4G8E7rtqEAu8MKofA9uo41wN9geST2dWPXwpQiCCSLQArADAdsQKcvNmHcLxqVwyEbRmMKsPPnSoqac7eEdX6f2FCUVczdbCh8LV7dgr2nnGufVckJNsr3q9WzpptSN1gaoXf7bPdiUCG4Mh4py5WNKt8A54L4Fyv98kKcJgTCb45eSeQFFU1JZauTSLTny4FVoJ4Spah3Z84xUQyNkUJJvEZjGA8CaQHogjc3N8Ncerd8ewxnHbft7nakCi6WDJRG7Y9V7Hnukkemp1YZSVacNSY57hutSuuMR2RVTgvJuR9GmyDNVaCzRQt6nRzsHoXz6Mgma3UXqYAx6eEyxSacjcK9jbDMpgzXfYxjMyT6pT9L5fGTf9TjGA3jmSqTKRBLrzqrGQKtBFSbA2NAC82TVqcdCoWNGFMe3ZzcVt1287J55yuc9n5D8hfBn1mXepvwS6NZY1zZtipoiNxdnCbKyTAAdqDB8qqmcYHHXY1ofzaAuboNwvtGnko6w4FzUCpvzyeRbYuzRUPV6DD4b6ZzAAX4TWydiVznMQ36esQ6yVvprqgWieyJAEVbteepQsMsiKUgTg5gZ7AkCdQ3pPkSKdwLYfoV9rf8y2VLiW2X22cEM76y1LFYbsRvcFESZq87BzJAtEN53gYV6nBZLuMGodxXC2BJfgxkoqvLMWdXYp94a1XujiSJG5qfRHeHNNjpMxKriRoNDEAvXrbhQGZjRLvtXW83GuZezg7U2XbZBNgWom1joLQ3QMmcQsNBsc2WZYZNAAXWPQpEDihmfDyjtj9YNaXmh1AJCNerCUcuMW7EeWCWuLKzTU5uiLp6W6Ry98BiFqdY9GsDvbUWPfBNqCMtSQHbTorj9W7HAPP9uQhtnS86jpZ9BMpgWvFMGeKbdy6hU27SK7nbpSJQhDg7po34PRVkzpwWPmeep4pYd5zoitR2kC6ho72WHh6FXagjjG2pw9JrWpBpcD64iTjvEZNi93pPGcXxWTJqJxfW5B7YiampkSZ7jU7613vy4oJ9gh3Q64aNBCdBRPUfUknG4FQzuXJ3okECqeioRWd5eSxMURi9zCWS496MT8PtzaXMN3AJHTqAJ3xNkeXE74dSTPXUZHenbayKHUmx5yKs85BYQMGVeUHnDAYLEbmLjHnpJ46EJ3WkGCGB1mDPK9RESiPR3uZZKuWhxtGZ2gh7cPnbswN9q9NKhDzPNGGsECEFfLWPrcASTzkMcRk6JCUyG1Bv4cAzhX6LxsiCnXtbgWUgEcm9PHpypkFRkT8GnGwavMY1zJFMQZwEgCHMzU75nScDP5ZArDENevsfoEipsZiTdbPcgPZYf9vfGbkUPed4s4QoMED4fxKSRrCW4kEmcYSFDxbCenVJvdNP5JELn1gwEXWhBp1K8SkjEB72tTmwrabT2vTzrUFKiZFK441Mu6TM2gmwXAuUqyA36oFJLAS95KqHDRk5eA2kt72WrjRKyAgvktadYWfGKVoxXe4rzXK4BZdLy7phJBc57kik2axZHEzQNfBMC649Ktfz641bEi2f7Z2AcvVDWYxY37yb5uuMP2QPkynqQcTgZXzmbMJdoxbq5Xgvr1kFFokgqthU5WhPYSCQUDQtHLSojb8JTKzLJWYxNMoq55FJPRJ2j5BC9t4BueiKt4rVHBoV8Q5AWvrukodQmUdNnT1czB653aqpn9Tvk8L777e3ZVC8xMGojUCy8NBb4wfWMS7jVygAa2Vkb2uJwobhY8mxb4CqdyLvZdVf9DiQ2fWYustdi6Ld7rxYY76yX2vmd8tqUEMm9sP1uAAd2PEkdPhuUCoCYJE3VmvZ6BVRveP7VvGFSqgZUVXMwoTUhMR1Aw",
              "stackHeight": 4
            },
            {
              "programIdIndex": 9,
              "accounts": [],
              "data": "DmF5UAdpGkMpiDa4Nw1UWfgq4WWhxdsYjzWLaphouz1sRnNeY4JNWqXUbjFQnmCnW29QpQ3FGuHykPYQChqX6V5tucMyqwiMVXwLikjhbwMgZTEEMNuF8cjz3t2u6rYkNoKiZq4oJEDogFSpSHuuPQHMdbJDmoyeRJw9TdgfJZR4C3RxT6MJcPZBVAp1jvoqwdYBXGBYn47hCvhXJxGYZLRoX99mz5X7pg5fRwveHHRpQKNd8uSLKcAeJfzGbdZatrtPhFfsrjcbGCRTf8D2ksSN2q9qeZ6sgqTHs1SjnLrwtgAnXbZTAZuZYSjoVop5U9qVaGPnjUXW3HCvCCiyPqhVfeFDKjArrAeLhga1Ff751AiAyhydo3ovrEsZDtcYQpqkcK9ZdKiMJX9RsdcSi1XQmkdYnDN8byhX2HDrRAUKdhTHPQKdFoJthKfSpBMtUpm1wfXS5kxCDGkPnruGEPra3mFqfnhJF1NbjtpoLcyWowV4XLviPthv2bnowSCVB3sk5ir7MbW3AA3Afw73DfuQdzGNTBDE4c6g6mjm3yD4FeSa6UKLVmfFM1Kq9pd4emGHY5SctJ6KDSZgjDh6XTwTr4Jb7Ka9Linrw9ZqK8C1T2vxemncbf6kwWK8d1bCZPFkxCXQh9AmLAesgdE5yFaxejJux65uboswarPypALChoc6QjEFULrgbhfQCKgyGCS2YNEoAbN8CYAyJ7WymZTkT11",
              "stackHeight": 3
            }
          ]
        }
      ],
      "logMessages": [
        "Program ComputeBudget111111111111111111111111111111 invoke [1]",
        "Program ComputeBudget111111111111111111111111111111 success",
        "Program 9sixVEthz2kMSKfeApZXHwuboT6DZuT6crAYJTciUCqE invoke [1]",
        "Program log: Instruction: Transfer",
        "Program 6UqiSPd2mRCTTwkzhcs1M6DGYsqHWd5jiPueX3LwDMXQ invoke [2]",
        "Program log: Instruction: ExecuteCompressedTransaction",
        "Program log: pre: cpi_signer_check: total heap used: 2878",
        "Program log: post: cpi_signer_check: total heap used: 2878",
        "Program log: pre: input_compressed_accounts_signer_check: total heap used: 3024",
        "Program log: post: input_compressed_accounts_signer_check: total heap used: 3024",
        "Program log: pre: output_compressed_accounts_write_access_check: total heap used: 3138",
        "Program log: post: output_compressed_accounts_write_access_check: total heap used: 3138",
        "Program log: pre: sum_check: total heap used: 3252",
        "Program log: post: sum_check: total heap used: 3252",
        "Program log: sum check success",
        "Program log: pre: fetch_roots: total heap used: 3460",
        "Program log: post: fetch_roots: total heap used: 3460",
        "Program log: pre: hash_input_compressed_accounts: total heap used: 3574",
        "Program log: post: hash_input_compressed_accounts: total heap used: 3574",
        "Program log: pre: verify_state_proof: total heap used: 3688",
        "Program log: post: verify_state_proof: total heap used: 3688",
        "Program log: pre: insert_nullifiers: total heap used: 3802",
        "Program 5QPEJ5zDsVou9FQS3KCauKswM3VwBEBu4dpL9xTqkWwN invoke [3]",
        "Program log: Instruction: InsertIntoNullifierQueues",
        "Program 11111111111111111111111111111111 invoke [4]",
        "Program 11111111111111111111111111111111 success",
        "Program 5QPEJ5zDsVou9FQS3KCauKswM3VwBEBu4dpL9xTqkWwN consumed 12995 of 796139 compute units",
        "Program 5QPEJ5zDsVou9FQS3KCauKswM3VwBEBu4dpL9xTqkWwN success",
        "Program log: post: insert_nullifiers: total heap used: 3802",
        "Program log: pre: insert_output_compressed_accounts_into_state_merkle_tree: total heap used: 3916",
        "Program 5QPEJ5zDsVou9FQS3KCauKswM3VwBEBu4dpL9xTqkWwN invoke [3]",
        "Program log: Instruction: AppendLeavesToMerkleTrees",
        "Program log: pre: process_append_leaves_to_merkle_trees: total heap used: 832",
        "Program log: pre: process_batch: total heap used: 1704",
        "Program log: transferring rollover fee: 299",
        "Program 11111111111111111111111111111111 invoke [4]",
        "Program 11111111111111111111111111111111 success",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV invoke [4]",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV consumed 38 of 686163 compute units",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV success",
        "Program log: post: process_batch: total heap used: 1704",
        "Program log: post: process_append_leaves_to_merkle_trees: total heap used: 832",
        "Program 5QPEJ5zDsVou9FQS3KCauKswM3VwBEBu4dpL9xTqkWwN consumed 70643 of 754320 compute units",
        "Program 5QPEJ5zDsVou9FQS3KCauKswM3VwBEBu4dpL9xTqkWwN success",
        "Program log: post: insert_output_compressed_accounts_into_state_merkle_tree: total heap used: 3916",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV invoke [3]",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV consumed 38 of 670951 compute units",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV success",
        "Program 6UqiSPd2mRCTTwkzhcs1M6DGYsqHWd5jiPueX3LwDMXQ consumed 279354 of 949629 compute units",
        "Program 6UqiSPd2mRCTTwkzhcs1M6DGYsqHWd5jiPueX3LwDMXQ success",
        "Program 9sixVEthz2kMSKfeApZXHwuboT6DZuT6crAYJTciUCqE consumed 330592 of 999850 compute units",
        "Program 9sixVEthz2kMSKfeApZXHwuboT6DZuT6crAYJTciUCqE success"
      ],
      "preTokenBalances": [],
      "postTokenBalances": [],
      "rewards": [],
      "loadedAddresses": {
        "writable": [],
        "readonly": []
      },
      "computeUnitsConsumed": 330742
    },
    "version": 0,
    "blockTime": 1714685552
  },
  "compression_info": {
    "closed_accounts": [
      {
        "account": {
          "hash": "39r45MHQfVvQ7YTvitH5xGhCMTfbRcWDF5HpF4nynYze",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "qzqalVwAL3IXoKN0YmHtbP7R2CyP8yiDe7OAtP3MHVs5Kx4YTy22xBULRXO57ikodi45oovdBYueMJ4SkI5sRegDAAAAAAAAAAEAAAAAAAAAAAA=",
            "dataHash": "u1BmeVTVvQs6iAYxXhdit96KkWzPvgDLDEaH6vovFHX"
          },
          "owner": "9sixVEthz2kMSKfeApZXHwuboT6DZuT6crAYJTciUCqE",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 0,
          "seq": 1,
          "slotCreated": 0
        },
        "optional_token_data": {
          "mint": "CXQYfFDoNQaDZTZGJpmATiXNddWBM7mS3ZgeWmoE8vD8",
          "owner": "4rANawp9ahHmvaVi3CCeJSam8JTA4DDY3htJKnhYxbHN",
          "amount": 1000,
          "delegate": null,
          "state": "initialized",
          "isNative": null,
          "delegatedAmount": 0
        }
      }
    ],
    "opened_accounts": [
      {
        "account": {
          "hash": "3YQkQGbjnVXT5oNcG72MrQGgLwL7h3XCZNXkSuvuxVRi",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "qzqalVwAL3IXoKN0YmHtbP7R2CyP8yiDe7OAtP3MHVs5Kx4YTy22xBULRXO57ikodi45oovdBYueMJ4SkI5sRSwBAAAAAAAAAAEAAAAAAAAAAAA=",
            "dataHash": "2qFkYkrbJ29APcT5eVom8rn9d5Kmk3WHUpHtzwUbRCtj"
          },
          "owner": "9sixVEthz2kMSKfeApZXHwuboT6DZuT6crAYJTciUCqE",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 1,
          "seq": 2,
          "slotCreated": 37
        },
        "optional_token_data": {
          "mint": "CXQYfFDoNQaDZTZGJpmATiXNddWBM7mS3ZgeWmoE8vD8",
          "owner": "4rANawp9ahHmvaVi3CCeJSam8JTA4DDY3htJKnhYxbHN",
          "amount": 300,
          "delegate": null,
          "state": "initialized",
          "isNative": null,
          "delegatedAmount": 0
        }
      },
      {
        "account": {
          "hash": "c8aPjrZbsKLMdYKPpnurT1PaKbAkQku9PHwcEmT9NMe",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "qzqalVwAL3IXoKN0YmHtbP7R2CyP8yiDe7OAtP3MHVvtWin3bfRt5kpMdOgv9CTZwnh9A7OI+UuTk3fd2Cp2ErwCAAAAAAAAAAEAAAAAAAAAAAA=",
            "dataHash": "14LocxfK5B1gZMRQLSLB6QvtoHLzSeegcNSGaNxgA8Dq"
          },
          "owner": "9sixVEthz2kMSKfeApZXHwuboT6DZuT6crAYJTciUCqE",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 2,
          "seq": 2,
          "slotCreated": 37
        },
        "optional_token_data": {
          "mint": "CXQYfFDoNQaDZTZGJpmATiXNddWBM7mS3ZgeWmoE8vD8",
          "owner": "GyXNDaUUBwzYp24vEzang6SyCzcA8L3csZkiALqF6KRs",
          "amount": 700,
          "delegate": null,
          "state": "initialized",
          "isNative": null,
          "delegatedAmount": 0
        }
      }
    ]
  }
}
