tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_legacy_transactions-bob-token-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
[
  {
    "signature": "5Ea6iQQZ1JYfiDq8H6qMKYdFcut1cUfd9pstCGc3BsQztTbgKA4LhsEx6XKQ1bMhKp5KMyyw5BuuooxEcpGLyHFB",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "4uLjV2xNmD6LD76XeSfDZoqxnjfY7bzcnpj7cqG4ZDAhVKqtUbAxajuvs4qSdJxLxbxcAjStvUnY5DhhSPgKQFcB",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "4Ld9WjbPxzhDsiTfiPfkw1v9xoAXwEUHWLxnKR9sazxRxWeGCeWHgQHpvABwssQUb8srwdFfgFF2sUxn8Toq8hCM",
    "slot": 0,
    "blockTime": 0
  },
  {
    "signature": "41rBbMrNtZveMdPXPrHJLaoEzZ9WvJdgTbvcDhLM39THw7v51FjbCdUyWYFNswr1k3pRYbKvAcYb84bft2NbWgP2",
    "slot": 0,
    "blockTime": 0
  }
]
