tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_legacy_transactions-charles-validity-proof.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: validity_proof
---
{
  "value": {
    "compressedProof": {
      "a": [],
      "b": [],
      "c": []
    },
    "roots": [
      "jQKhAHpGbSTJLimk3bGSX7KLi7CsX6nkosS9YeCFfVs",
      "jQKhAHpGbSTJLimk3bGSX7KLi7CsX6nkosS9YeCFfVs"
    ],
    "rootIndices": [
      7,
      7
    ],
    "leafIndices": [
      5,
      4
    ],
    "leaves": [
      "2uSjtTXvYYb544CrvmDsTJ98M8qdw8SFmZ5muEHnZET9",
      "3a6Rs5JJ66YWEHuYm4KQuhbHAFnUszWiL8kgzV4MHFZW"
    ],
    "merkleTrees": [
      "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
      "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W"
    ]
  },
  "context": {
    "slot": 0
  }
}
