tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_mint_and_transfer_legacy_transactions-mint-transaction.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: parsed_transaction
---
{
  "transaction": {
    "slot": 39,
    "transaction": [
      "AsMv7PttO41w/QxVEcpUnF9rJVhZWcXda34E04cuRMpKct3yKGrsHIrPrwu0x5gThQxUFYhTnRlwLMrKV7dhWAijlj/DgltQHigUtIfYYgDiM2lNh3OJ61wWv9AbM4IQtcWe+bladhLa0xLMvyt/zWrN7VL1XHCnqgNOEqIJ8GsCgAIBCg/Xw4274s8SOb1HUoePEYWcuaib2TszEE/MS6rN3ZnJw1g0aCgLRYDYsmShIX1QWji+rLieQk0Jsqp5kIA3Hk0lmZ+QWZx25QI8+mR2PO/K59UvYAZyEm5LTp8RQyc3Tgiz6hU4DLw9ZiSqiR00/cZq+BMXXXbDTArjaEwfh7TvrkRNfSBMgD20Ac9FLHl2mRGzt3Mio39m1gFXr7FfMUFFAwZGb+UhFzL/7K26csOb57yM5bvF9xJrLEObOkAAAAD1itLHAR4o1KBGtaL93zMnlB5NHD6SDRSqmfZ7YrJBH7SlQOyDt9WW7rhI2hN7rYf3O2M6x7u3IJANtD1uTGCcBt324ddloZPZy+FGzut5rBy0he1fWzeROoz1hX7/AKnu+iPYo1pSSKfRxOPSrVn/jhTHlpDXPaQiL7Xk4pnQEZHO1F4ue36ePjvKhQ/1+bWXRuK+jAPhOiyhsi1YEji5C7wPwLtHyi90xBEulKsTz6PGNOXcF+rLA80aI81+eHyUJa+9/ABJJWec/z1Ytd+0tY2uuyhzxF6W5bZkVSls+KxW1RflaYZhtplDZTn2OqAPHuUse8KSTOHPrHkF2nKGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAfHjy7km7o59ufSs9BQQ2wDRuVf4h84G7P3QDw00AQCgIFAAUCQEIPAAYOAAEHAgMICQoLDA0EBg448SIwuiWze8ABAAAAs5+cdYoFg0UPBleE52rAG8aPhhet5WjdTRBOHySczl0BAAAA6AMAAAAAAAAA",
      "base64"
    ],
    "meta": {
      "err": null,
      "status": {
        "Ok": null
      },
      "fee": 10000,
      "preBalances": [
        996489120,
        0,
        1461600,
        2039280,
        9496056960,
        1,
        1141440,
        0,
        929020800,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "postBalances": [
        996478935,
        0,
        1461600,
        2039280,
        9496057145,
        1,
        1141440,
        0,
        929020800,
        1141440,
        1392000,
        1141440,
        0,
        1141440,
        1
      ],
      "innerInstructions": [
        {
          "index": 1,
          "instructions": [
            {
              "programIdIndex": 8,
              "accounts": [
                2,
                3,
                1
              ],
              "data": "6qYT3cRnoTxb",
              "stackHeight": 2
            },
            {
              "programIdIndex": 9,
              "accounts": [
                0,
                7,
                10,
                11,
                12,
                13,
                6,
                9,
                9,
                14,
                9,
                4
              ],
              "data": "BW6x6EtScnGQv3UftNdJqw2D9R3uaSRDuQMbpp9zkDAg2XFPMf4bZN1UXtaMoWqH1CHCwHiauHC9goqnApJoAf8qvwdVWRS42F2fLEGZNXYG7NtLdU9N3qDHRbiwGdUgpASozpKepP4UrK5rYPz8xqDbvbyRWeG7DqKpUSr3r2eaJMUZrDedzMP5Pvp7tMePC3QspYUpAMLvZxk69bnxSUJopnXX96WXLZd6wyu4M1vMd67LChRK9n158DureNEe3qTSu6gUCuD5bXMU4JC3E8JKvQrhPGBM7SX2GpP",
              "stackHeight": 2
            },
            {
              "programIdIndex": 13,
              "accounts": [
                0,
                12,
                10,
                14,
                4
              ],
              "data": "5wPdbtbk7M4b3JSHrvzp246HM13dJibHC25TKnZZBMkzw1k35hxx5Lv2dCDdup",
              "stackHeight": 3
            },
            {
              "programIdIndex": 14,
              "accounts": [
                0,
                4
              ],
              "data": "3Bxs4XoPh3u5UtLF",
              "stackHeight": 4
            },
            {
              "programIdIndex": 11,
              "accounts": [],
              "data": "1111Q117Chz81JU2f1YTaGScsY7Uikw3hy3YuXgz8Cm1wqMZbcV6bRB7VqYWQ5YjrgRmkxumxZUTdjsiG7eMmFUxh5QbrqU7ju3K1UMvJs2ehRbUfPuhWFRSZ5Th2GmMjhDXuD8Y55BGbUZzuoZSoxFrXBknjFEGYtWkJ4g875T8zkJFaQpMT7Ejvybr8u7Bo55WCc7GCrdsP7rWaQvdCd8JN3G8DUTt43Nhsu59qb2AdUM7qhYXQXWHeYHnbe26qEn1k1qGz4vEwcVeK2s3n21FX8MPR1DSuLbmbpWuHAU2PWGqsRzm5aZqzwhgimbmSuNCHYMT9FhQc3Nc8ZEpqj9WZkgSqjzuCcjKE2mbYytxt83JjBid5iHPhMsGkbgX4syUdMc9bHpNeDRntTh",
              "stackHeight": 3
            }
          ]
        }
      ],
      "logMessages": [
        "Program ComputeBudget111111111111111111111111111111 invoke [1]",
        "Program ComputeBudget111111111111111111111111111111 success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN invoke [1]",
        "Program log: Instruction: MintTo",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA invoke [2]",
        "Program log: Instruction: MintTo",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA consumed 4492 of 985773 compute units",
        "Program TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA success",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN invoke [2]",
        "Program log: Instruction: InvokeCpi",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK invoke [3]",
        "Program log: Instruction: AppendLeavesToMerkleTrees",
        "Program 11111111111111111111111111111111 invoke [4]",
        "Program 11111111111111111111111111111111 success",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK consumed 40972 of 930772 compute units",
        "Program CbjvJc1SNx1aav8tU49dJGHu8EUdzQJSMtkjDmV8miqK success",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV invoke [3]",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV consumed 38 of 887234 compute units",
        "Program noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV success",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN consumed 79409 of 966050 compute units",
        "Program H5sFv8VwWmjxHYS2GB4fTDsK7uTtnRT4WiixtHrET3bN success",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN consumed 114046 of 999850 compute units",
        "Program HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN success"
      ],
      "preTokenBalances": [
        {
          "accountIndex": 3,
          "mint": "BLgVpQXRRmUGBMztr3M8mRkrNEtjBGbnrTrfBPLv2QJT",
          "uiTokenAmount": {
            "uiAmount": null,
            "decimals": 2,
            "amount": "0",
            "uiAmountString": "0"
          },
          "owner": "DAAY8YnCFASfeLyXFXff8bTitePXdGcXYr6DkkYJ3aJX",
          "programId": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
        }
      ],
      "postTokenBalances": [
        {
          "accountIndex": 3,
          "mint": "BLgVpQXRRmUGBMztr3M8mRkrNEtjBGbnrTrfBPLv2QJT",
          "uiTokenAmount": {
            "uiAmount": 10.0,
            "decimals": 2,
            "amount": "1000",
            "uiAmountString": "10"
          },
          "owner": "DAAY8YnCFASfeLyXFXff8bTitePXdGcXYr6DkkYJ3aJX",
          "programId": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
        }
      ],
      "rewards": [],
      "loadedAddresses": {
        "writable": [],
        "readonly": []
      },
      "computeUnitsConsumed": 114196
    },
    "version": 0,
    "blockTime": 1719426181
  },
  "compressionInfo": {
    "closedAccounts": [],
    "openedAccounts": [
      {
        "account": {
          "hash": "38cMfbf6p4aymyPpEEzNnfK9LsAxerCe917nxLDm1ZDY",
          "address": null,
          "data": {
            "discriminator": 2,
            "data": "mZ+QWZx25QI8+mR2PO/K59UvYAZyEm5LTp8RQyc3Tgizn5x1igWDRQ8GV4TnasAbxo+GF63laN1NEE4fJJzOXegDAAAAAAAAAAA=",
            "dataHash": "3BSxj25DcZ8rG2gRih7sdUSgKmDfSpzYEWcs7ZH7yoXq"
          },
          "owner": "HXVfQ44ATEi9WBKLSCCwM54KokdkzqXci9xCQ7ST9SYN",
          "lamports": 0,
          "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
          "leafIndex": 0,
          "seq": 1,
          "slotCreated": 39
        },
        "optionalTokenData": {
          "mint": "BLgVpQXRRmUGBMztr3M8mRkrNEtjBGbnrTrfBPLv2QJT",
          "owner": "D6B941apqSHVU5TV2n7JevkpAVQ4sdhiT6g1fNoEMfYG",
          "amount": 1000,
          "delegate": null,
          "state": "initialized",
          "tlv": null
        }
      }
    ]
  }
}
